fix weird spacing below server list buttons

--- a/camel/static/stylesheets/app.css
+++ b/camel/static/stylesheets/app.css
@@ -103,6 +103,10 @@ a:hover {
 ----------------------------------------- */
 
 
+.server-list ul.button-group {
+    margin-bottom: 0;
+}
+
 
 
 /* -----------------------------------------
